<resources>
    <string name="app_name">FalconsRestaurant</string>

    <string name="version">version 29</string>
    <string name="back">Back</string>
    <string name="stop_item">Stop Item</string>
    <string name="name">Name</string>
    <string name="user">User</string>
    <string name="table_number">Table #</string>
    <string name="captain">Captain</string>
    <string name="date">Date</string>
    <string name="seats_count">Seats</string>
    <string name="exit">Exit</string>
    <string name="modf">MODF</string>
    <string name="Void">Void</string>
    <string name="table_note">Table Note</string>
    <string name="finish">Finish</string>
    <string name="cancel">Cancel</string>
    <string name="order_num">Order NO</string>
    <string name="section">Section</string>
    <string name="total_title">TOTAL</string>
    <string name="tax_title">TAX</string>
    <string name="net_total_title">NET TOTAL</string>
    <string name="update_data">Update Data</string>
    <string name="tables">Tables</string>
    <string name="settings">Settings</string>
    <string name="logout">LogOut</string>
    <string name="msg_reload_data">unable to read data</string>
    <string name="hf">HF</string>
    <string name="lt">LT</string>
    <string name="no">NO</string>
    <string name="ext">EXT</string>
    <string name="done">Done</string>
    <string name="wait">Please wait</string>
    <string name="set_quantity">Set Quantity</string>
    <string name="stop_time_item">Are you sure you want to stop item ?</string>
    <string name="stop_time_item_t">stop item ?</string>
    <string name="not_time_item">Selceted item is not time item!</string>
    <string name="must_wait">You must wait at least one minuet!</string>
    <string name="finished_time_item">Selceted item time is closed!</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="system_login">System Login</string>
    <string name="password">Password</string>
    <string name="enter_password_first">Please enter the password first</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="enter_server_ip">Enter the server IP</string>
    <string name="password_incorrect">Password is incorrect</string>
    <string name="enter_password">Enter Password</string>
    <string name="available">Available</string>
    <string name="used">Used</string>
    <string name="finish_soon">Finish Soon</string>
    <string name="reserved">Reserved</string>
    <string name="locked">Locked</string>
    <string name="pick_color">Pick a color</string>
    <string name="change_language_title">Choose Language</string>
    <string name="log">Log</string>
    <string name="ip_address">IP Address</string>
    <string name="send">Send</string>
    <string name="pos_no">POS NO</string>
    <string name="STORE_NO">STORE NO</string>
    <string name="SECTION_BY_POS">Sections By POS</string>
    <string name="test_printing">Test Printing</string>
    <string name="language">Language</string>
    <string name="edit">Edit</string>
    <string name="home">Home</string>
    <string name="loading_data">Loading Data …</string>
    <string name="please_wait">Please Wait</string>
    <string name="please_complete_ip_address">Please fill all fields of the ip address</string>
    <string name="reason">Reason</string>
    <string name="ok">OK</string>
    <string name="msg_input_error">Wrong input format</string>
    <string name="unable_to_connect">Unable to connect</string>
    <string name="item_note">Item Remark</string>
    <string name="device_type">Device Type</string>
    <string name="dine_in">Dine in</string>
    <string name="take_out">Take out</string>
    <string name="select_type">Select device type</string>
    <string name="cash">Cash</string>
    <string name="visa">Visa</string>
    <string name="amount">Amount</string>
    <string name="payed">Payed</string>
    <string name="change">Change</string>
    <string name="sure">Sure</string>
    <string name="item_stoped">Item has been stoped!</string>
    <string name="select_payment_method">Select payment method</string>
    <string name="master_card">Master Card</string>
    <string name="hide">Hide</string>
    <string name="clear_items">Clear Items</string>
    <string name="caution">Caution!</string>
    <string name="delete_items_message">All items will be deleted, continue?</string>
    <string name="changes_saved">Changes Saved</string>
    <string name="pay">Pay</string>
    <string name="other">Other</string>
    <string name="processing">Processing</string>
    <string name="error_occurred">Error occurred</string>
    <string name="payment_success">Payment is successful</string>
    <string name="all_info_are_correct">Make sure all information are correct</string>
    <string name="exact">Exact</string>
    <string name="need_a_waiter">Need a waiter</string>
    <string name="table">Table</string>
    <string name="order_is_ready">Order is ready</string>
    <string name="ready_for_checkout">Ready for checkout</string>
    <string name="dismiss">DISMISS</string>
    <string name="item_description">Item Description</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="open_item">Open Item</string>
    <string name="already_printed">Already printed</string>
    <string name="print">Print</string>
    <string name="reviews">Reviews</string>
    <string name="dateByPOS">Date By POS</string>
    <string name="splitedError">Can not open a splited table</string>
    <string name="tableBlocked">Table os blocked</string>
    <string name="cleanedTable">Table is cleaned by the admin</string>
    <string name="no_msg">No</string>
    <string name="workWithTime">Work WithTime Item</string>
    <string name="callCaptin">Call Captin</string>
    <string name="itemInfo">Item Info</string>


</resources>