<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="10dp"
        android:gravity="left"
        android:hint="@string/item_description" />

    <EditText
        android:id="@+id/txtQty"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="10dp"
        android:gravity="left"
        android:hint="@string/quantity"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/txtPrice"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="10dp"
        android:gravity="left"
        android:hint="@string/price"
        android:inputType="numberDecimal" />
</LinearLayout>