<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/main_background"
        android:gravity="center_horizontal"
        tools:context=".activities.MainActivity">

    <RelativeLayout
            android:id="@+id/user_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/user_title"
                android:layout_width="420dp"
                android:layout_height="90dp"
                android:text="@string/user"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:background="@drawable/card_background_black"
                android:gravity="center"
                android:paddingRight="8dp"
                android:drawableRight="@drawable/user"
                android:layout_marginTop="70dp"
                android:textSize="28sp"/>

        <TextView
                android:id="@+id/update_data"
                android:layout_width="180dp"
                android:layout_height="90dp"
                android:text="@string/update_data"
                android:textColor="@color/white"
                android:background="@drawable/card_background_blue"
                android:layout_toLeftOf="@+id/user_title"
                android:gravity="center"
                android:layout_marginTop="70dp"
                android:textSize="24sp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tables"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_below="@+id/user_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/circle_background_blue"
        android:gravity="center"
        android:text="@string/tables"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <TextView
            android:id="@+id/settings"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:background="@drawable/circle_background_blue"
            android:layout_below="@+id/user_layout"
            android:layout_toLeftOf="@+id/tables"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:textSize="28sp"/>

    <TextView
            android:id="@+id/logout"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:background="@drawable/circle_background_blue"
            android:layout_below="@+id/user_layout"
            android:layout_toRightOf="@+id/tables"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:textSize="28sp"/>

    <TextView
        android:id="@+id/reviews"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_below="@+id/tables"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/circle_background_blue"
        android:gravity="center"
        android:text="@string/reviews"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:visibility="invisible"
        tools:visibility="visible" />

</RelativeLayout>
