<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:background="@drawable/main_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/system_login"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:layout_marginTop="110dp"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:hint="@string/password"
            android:gravity="center"
            android:background="@drawable/card_background_white"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/login_title"
            android:inputType="textPassword"/>

    <Button
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/password"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:padding="12dp"
            android:background="@drawable/card_background_green_large_radius"/>

</RelativeLayout>